# event-calendar

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  installing guide.txt  manage.py  pyproject.toml  requirements copy.txt  requirements.txt
.github/workflows/: ci.yml  codeql-analysis.yml
accounts/: forms.py  tests.py  urls.py
accounts/management/commands/: csu.py
accounts/migrations/: 0001_initial.py
accounts/models/: __init__.py  user.py
accounts/views/: __init__.py  signin.py  signout.py  signup.py
calendarapp/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  utils.py  views.py
calendarapp/migrations/: 0001_initial.py  0002_auto_20200705_1343.py  0002_auto_20210717_1606.py  0003_alter_event_title.py  0003_event_date.py  0004_alter_eventmember_options.py  0004_auto_20210520_1336.py  0005_auto_20210520_1347.py  0005_event_direction_event_trainer.py  0006_booking_request.py  0006_event_max_participants.py  0007_alter_event_max_participants.py  0007_auto_20210520_1522.py  0008_alter_event_description_alter_event_max_participants.py  0008_remove_event_date.py  0009_auto_20210520_1552.py  0010_auto_20210520_1613.py  0011_auto_20210520_1615.py  0012_auto_20210520_1656.py  0013_room.py  0014_booking_request_room.py  0015_room_location.py  0016_remove_room_location.py  0017_room_facility.py  0018_delete_room_facility.py  0019_facility.py  0020_room_facility.py  0021_auto_20210524_1029.py  0022_auto_20210524_1045.py  0023_auto_20210524_1314.py  0024_remove_booking_request_room.py  0025_remove_booking_request_description.py  0026_auto_20210524_1329.py  0027_auto_20210525_1352.py  0027_remove_room_facility.py  0028_auto_20210525_1407.py  0029_auto_20210525_1410.py  0030_event_user.py  0031_auto_20210602_1039.py  0032_auto_20210602_1053.py  (+1 more)
calendarapp/models/: __init__.py  event.py  event_abstract.py  event_member.py
calendarapp/views/: __init__.py  event_list.py  other_views.py
eventcalendar/: asgi.py  helper.py  settings.py  urls.py  views.py  wsgi.py
sport/: admin.py  apps.py  serializers.py  urls.py  views.py
sport/migrations/: 0001_initial.py  0002_trainer_achievements_trainer_qualification.py
sport/models/: __init__.py  sport.py
static/calender/: locales-all.js  locales-all.min.js  main.css  main.js  main.min.css  main.min.js
static/css/: accounts.css  calender.css  main.css  override.css  style.css
static/css/bootstrap/: bootstrap.css
static/js/js/plugins/: bootstrap-notify.min.js  chart.js  fullcalendar.min.js  jquery.dataTables.min.js  jquery.vmap.min.js
static/js/plugins/: bootstrap-datepicker.min.js  jquery.vmap.sampledata.js
templates/: All_request.html  Approved_request.html  Pending_request.html  add_event.html  add_member.html  admin_calendar.html  base.html  book_room.html  calendar.html  calendar_admin.html  event-details.html  event.html  event_delete.html  room.html  room_details.html  signup_old.html  update_form.html
templates/accounts/: signin.html  signup.html
templates/base/: base.html  js.html
templates/calendarapp/: calendar.html  dashboard.html  events_list.html
vRoom_booking/: pyvenv.cfg
vRoom_booking/Scripts/: activate  activate.bat  django-admin.py
